# Thread_lab_2

./: .gitignore  CMakeLists.txt  main.c  readme.md
src/task1/: task1.c  task1.h
src/task2/: task2.c  task2.h
src/task3/: surface.py  task3.c  task3.h
src/utils/: utils.c  utils.h
